<resources>
    <string name="app_name">Dicoding Stories</string>
    <string name="password_length">Password length must be more than 6 characters</string>
    <string name="dicoding_stories">Dicoding Stories</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="don_at_have_account">Don\'t have an account?</string>
    <string name="register_lower">register</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_lower">login</string>
    <string name="name">Name</string>
    <string name="back">Back</string>
    <string name="upload">Upload</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image">Image</string>
    <string name="description">Description</string>
    <string name="date_second">second ago</string>
    <string name="date_minute">minute ago</string>
    <string name="date_hour">hour ago</string>
    <string name="date_day">day ago</string>
    <string name="date_week">week ago</string>
    <string name="date_month">month ago</string>
    <string name="date_year">year ago</string>
    <string name="text_not_null">cannot be empty</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="select_language">Select language</string>
    <string name="logout">Logout</string>
    <string name="dark_mode">Dark mode</string>

    <string name="image_home_top">Image home top</string>
    <string name="image_logo">Image logo</string>
    <string name="icon_logout">Icon logout</string>
    <string name="retry">Retry</string>
    <string name="maps">Maps</string>
    <string name="icon_maps_type">Icon maps type</string>
    <string name="maps_type">Maps Type</string>
    <string name="normal">Normal</string>
    <string name="sattelite">Sattelite</string>
    <string name="terrain">Terrain</string>
    <string name="maps_style">Maps Style</string>
    <string name="night">Night</string>
    <string name="silver">Silver</string>
    <string name="share_my_location">Share my location</string>
</resources>