<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.page.post.PostNewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/color_main"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/im_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:src="@drawable/ic_arrow_back"
            android:background="@drawable/ripple_oval_primary_white"
            android:contentDescription="@string/image_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/upload"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="26dp">

        <ImageView
            android:id="@+id/img_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_image_24"
            android:background="@color/gray"
            android:contentDescription="@string/image_description"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="20dp">

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg_button"
            android:text="@string/camera"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_bg_button"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_stroke_primary">

        <EditText
            android:id="@+id/edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/description"
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:inputType="textMultiLine"
            android:layout_margin="6dp"
            android:textColor="@color/black"
            android:importantForAutofill="no" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_bg_button"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="60dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white"/>

</LinearLayout>