<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="24dp"
    android:background="@drawable/bg_rectangle_top_round_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/view"
        android:layout_width="200dp"
        android:layout_height="5dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_top_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_maps_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/maps_type"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        android:textColor="@color/blue_wood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <LinearLayout
        android:id="@+id/linear_maps_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linear_maps_sattelite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_maps_type"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_maps_normal"
            android:layout_width="81dp"
            android:layout_height="81dp"
            android:background="@drawable/bg_stroke_maps"
            android:contentDescription="@string/normal"
            android:padding="1dp"
            android:src="@drawable/ic_maps_normal" />

        <TextView
            android:id="@+id/tv_maps_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/normal"
            android:textColor="@color/blue_wood"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_maps_sattelite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_maps_type"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_maps_sattelite"
            android:layout_width="81dp"
            android:layout_height="81dp"
            android:background="@drawable/bg_stroke_maps"
            android:contentDescription="@string/sattelite"
            android:padding="1dp"
            android:src="@drawable/ic_maps_sattelite" />

        <TextView
            android:id="@+id/tv_maps_sattelite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sattelite"
            android:textColor="@color/blue_wood"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_maps_terrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linear_maps_sattelite"
        app:layout_constraintTop_toBottomOf="@+id/tv_maps_type"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_maps_terrain"
            android:layout_width="81dp"
            android:layout_height="81dp"
            android:background="@drawable/bg_stroke_maps"
            android:contentDescription="@string/terrain"
            android:padding="1dp"
            android:src="@drawable/ic_maps_terrain" />

        <TextView
            android:id="@+id/tv_maps_terrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/terrain"
            android:textColor="@color/blue_wood"
            android:textSize="16sp" />

    </LinearLayout>


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/linear_maps_normal"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/tv_maps_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/maps_style"
        android:textColor="@color/blue_wood"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <LinearLayout
        android:id="@+id/linear_maps_style_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linear_maps_sattelite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_maps_style"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_maps_style_normal"
            android:layout_width="81dp"
            android:layout_height="81dp"
            android:background="@drawable/bg_stroke_maps"
            android:contentDescription="@string/normal"
            android:padding="1dp"
            android:src="@drawable/ic_maps_normal" />

        <TextView
            android:id="@+id/tv_maps_style_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/normal"
            android:textColor="@color/blue_wood"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_maps_style_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_maps_style"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_maps_style_night"
            android:layout_width="81dp"
            android:layout_height="81dp"
            android:background="@drawable/bg_stroke_maps"
            android:contentDescription="@string/night"
            android:padding="1dp"
            android:src="@drawable/ic_maps_night" />

        <TextView
            android:id="@+id/tv_maps_style_night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/night"
            android:textColor="@color/blue_wood"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_maps_style_silver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linear_maps_style_night"
        app:layout_constraintTop_toBottomOf="@+id/tv_maps_style"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/img_maps_style_silver"
            android:layout_width="81dp"
            android:layout_height="81dp"
            android:background="@drawable/bg_stroke_maps"
            android:contentDescription="@string/silver"
            android:padding="1dp"
            android:src="@drawable/ic_maps_silver" />

        <TextView
            android:id="@+id/tv_maps_style_silver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/silver"
            android:textColor="@color/blue_wood"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>